# xiaobao-toos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_OUTLINE.md  README.md  README_EN.md  hosts  pyproject.toml  requirements.txt  临时密码.py  全时钟.py  手势识别.py  手部跟踪.py  数字倒计时.py  时钟.py  玫瑰花程序.py  破译程序.py  进度条.py  黑客特效.py
.github/: PULL_REQUEST_TEMPLATE.md
Disable-Downloads-in-Edge/: README.md  edge_download_manager.py
Edge-禁止下载/: edge_download_manager.py
Edge-联网控制/: README.md  上网助手.py  版本信息.txt
Image-to-Icon-Converter/: README.md  README.txt  图片转图标.pyw
LAN-AI-Large-Model-Client/: README.txt  版本信息.txt
LAN-Word-Battle/: LICENSE  README.txt  words.txt  单词对战.py  版本信息.txt
Student-PC-Internet-Management-Tool/: README.md  上网助手.py  版本信息.txt  联网工具.py
games_and_fun/: cipher_decrypter.py  clock.py  dashboard_clock.py  hacker_matrix.py  requirements.txt  tic_tac_toe.py  turtle_rose.py  井字棋.py  时钟.py  玫瑰花程序.py  破译程序.py  黑客特效.py
network/: lan_file_share.py  port_scanner.py  requirements.txt  speed_test.py  工具-局域网极速文件共享器.py
productivity/: batch_file_renamer.py  clipboard_translator.py  code_outline_generator.py  countdown.py  excel_batch_processor.py  progress_bar.py  requirements.txt  temp_password.py  工具-代码结构大纲生成器.py  工具-简易剪贴板历史翻译器.py  数字倒计时.py
remove-Learn-about-this-picture-tool/: hide_desktop_info.py  打包命令.txt
system/: requirements.txt  startup_manager.py  system_cleanup.py
vision/: gesture_recognizer.py  hand_tracking.py  image_compressor.py  requirements.txt  screen_capture.py  video_frame_extractor.py
局域网-Ai对话/: 版本信息.txt
(+31 files in other folders)
